fixes mobile layout issue

--- a/sass/custom/_andxyz-theme-overrides.scss
+++ b/sass/custom/_andxyz-theme-overrides.scss
@@ -13,8 +13,7 @@ article div.about-author {
   margin: 0 auto;
 
   .bio-overview {
-    padding-left: 40%;
-    margin-left: 30px;
+    float:left;
 
     h1,h2,h3,h4,h5,h6 {
       margin-bottom: 0.5em; }
@@ -27,15 +26,15 @@ article div.about-author {
       list-style: none; } }
 
   h1 {
-    margin: 0 18px 0.2em;
+    margin: 0 0 18px 0px;
     font-size: 62px;
-    text-align: center; }
+  }
 
   img.author {
     border:none;
     float:left;
     width: 255px;
-    width: 255px;
+    height: 255px;
     vertical-align: text-top;
     margin-right: 5%;
     margin-bottom: 5%;
